# CloudForge

./: .dockerignore  .env.example  .gitignore  .railwayignore  .replit  CLAUDE.md  CLOUDFORGE_WORKFLOW_SUMMARY.txt  COMPUTE_ENGINE_GUIDE.md  CONTRIBUTING.md  CloudForge_Complete_Handover.docx  DEPLOYMENT.md  DEPLOYMENT_UPDATES.md  Dockerfile  LICENSE  MIGRATION_GUIDE.md  README.md  SECURITY.md  SETUP.md  TESTING.md  bash.exe.stackdump  create_handover.py  docker-compose.yaml  fix_all_ts_files.py  fix_commas.py  generate_all_gcp_services.py  generate_gcp_services.py  main.py  pyproject.toml  render.yaml  replit.md  run_backend.py  start_backend.sh  temp_fix_button.txt  update_aws_icons.py
.github/: pull_request_template.md
Cloud_Services/: Cloud_All_Services_Catalog.xlsx
aws-services/: compute.json  index.json  machine-learning.json  messaging.json  networking.json  serverless.json  storage.json
azure-services/: analytics.json  compute.json  containers.json  database.json  developer-tools.json  index.json  machine-learning.json  management.json  messaging.json  networking.json  security.json  serverless.json  storage.json
backend/: .env.example  .railwayignore  Dockerfile  Dockerfile.prod  alembic.ini  gunicorn.conf.py  pytest.ini  railway.json  requirements.txt  start-combined.sh  test_dynamic_infracost.py  test_infracost.py
config/: README.md  development.env  production.env  staging.env
docs/: CLOUDFORGE_ARCHITECTURE_SCHEMA.md  ERD_DIAGRAMS.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile.prod  index.html  nohup.out  package-lock.json  package.json  (+6 more)
(+646 files in other folders)
